# ghead

./: CMakeLists.txt  README.md  main.cpp
include/: galois-head.h  ghead.h
src/: galois-head.cpp  ghead.cpp
test/: client.cpp  client_ghead.txt  main.cpp  server.cpp  server_ghead.txt  test_read.cpp
