PROJECT(ghead)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET (Tutorial_VERSION_MAJOR 1)
SET (Tutorial_VERSION_MINOR 0)
IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
MESSAGE(${PROJECT_SOURCE_DIR})
MESSAGE(${PROJECT_BINARY_DIR})
SET (VERSION_MAJOR 1)
SET (VERSION_MINOR 0)
CONFIGURE_FILE (
  "${PROJECT_SOURCE_DIR}/common/config.h.in"
  "${PROJECT_SOURCE_DIR}/common/config.h"
  )
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-Bsymbolic")
ELSE()
ENDIF()

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -std=c++2a -fno-strict-aliasing -Wno-register")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c++2a -fno-strict-aliasing -Wno-register")
SET(CMAKE_BUILD_TYPE "Release")

FIND_PACKAGE(Boost REQUIRED COMPONENTS log)
IF(NOT Boost_FOUND)
    MESSAGE("Can not find Boost")
ENDIF()

ADD_DEFINITIONS(-DBOOST_SPIRIT_THREADSAFE)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
ADD_DEFINITIONS(-D_DEBUG)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})


INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/common/util/include")

IF (NOT TARGET common)
    ADD_SUBDIRECTORY(common)
ENDIF()

ADD_LIBRARY(ghead STATIC ${PROJECT_SOURCE_DIR}/src/ghead.cpp)

ADD_EXECUTABLE(ghead_server "${PROJECT_SOURCE_DIR}/test/server.cpp")
TARGET_LINK_LIBRARIES(ghead_server common ghead)
EXECUTE_PROCESS(COMMAND cp "${PROJECT_SOURCE_DIR}/test/server_ghead.txt" "${PROJECT_BUILD_DIR}")

ADD_EXECUTABLE(ghead_client "${PROJECT_SOURCE_DIR}/test/client.cpp")
TARGET_LINK_LIBRARIES(ghead_client common ghead)
EXECUTE_PROCESS(COMMAND cp "${PROJECT_SOURCE_DIR}/test/client_ghead.txt" "${PROJECT_BUILD_DIR}")
